Small styling change to fix the cropping of the "download interactors" button.

--- a/src/main/resources/org/reactome/web/diagram/controls/settings/tabs/InteractorsTabPanel.css
+++ b/src/main/resources/org/reactome/web/diagram/controls/settings/tabs/InteractorsTabPanel.css
@@ -2,6 +2,7 @@
     padding: 0 10px 0 10px;
     font-family: Arial Unicode MS, Arial, sans-serif !important;
     font-size: small !important;
+    line-height: 1.2;
 }
 
 .interactorLabel {
